@@ -1,3 +1,9 @@
+2007-12-18  Luis Lavena <luislavena@gmail.com>
+
+	* lib/rubygems/commands/mirror_command.rb: Work around URI::parse
+	  processing file:// scheme and drive paths on Windows.
+	* test/test_gem_commands_mirror_command.rb: ditto.
+
 2007-12-17  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/installer.rb:  Copy files into bindir if they don't
